--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-byulnuri
+<!doctype html>
+<html lang="ko">
+ <head>
+  <meta charset="UTF-8" />
+  <title>geo</title>
+ </head>
+ <body>
+  <h1>별누리</h1>
+ </body>
+</html>
